--- a/server/.env
+++ b/server/.env
@@ -2,9 +2,12 @@ APP_PORT = 3001
 CLIENT_URL="http://localhost:3000"
 DB_HOST = "localhost"
 DB_PORT = 3306
-DB_USER = "ecohaven"
-DB_PWD = "mysql123"
-DB_NAME = "ecohaven"
+DB_USER = "eco234550h"
+DB_PWD = "ecohavenAdmin"
+DB_NAME = "haveneco_234550h"
 
 APP_SECRET = "ecohaven_app_secret"
 TOKEN_EXPIRES_IN = "30d"
+
+EMAIL_USER= "ecohaven787@gmail.com"
+EMAIL_PASS= "thta vezg irvo auve"
