--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,14 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@mui/icons-material": "^5.15.19",
+    "@mui/icons-material": "^5.16.0",
     "@mui/material": "^5.15.19",
+    "@mui/x-data-grid": "^7.9.0",
     "axios": "^1.7.2",
     "formik": "^2.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^6.23.1",
     "yup": "^1.4.0"
   },
