refactor: Separate navigation component and integrate UI improvements
- Separated navigation code from app.jsx as its own component
- Integrated navigation and footer to user account pages
- Styled login and register page
- Updated models for user and staff account (leaves + status)
- Fixed bugs with page access for users and guests
- Fixed issue with user account and profile picture deletion

--- a/server/.env
+++ b/server/.env
@@ -2,12 +2,12 @@ APP_PORT = 3001
 CLIENT_URL="http://localhost:3000"
 DB_HOST = "localhost"
 DB_PORT = 3306
-DB_USER = "eco234550h"
-DB_PWD = "ecohavenAdmin"
-DB_NAME = "haveneco_234550h"
+DB_USER = "ecohaven"
+DB_PWD = "mysql123"
+DB_NAME = "ecohaven"
 
 APP_SECRET = "ecohaven_app_secret"
 TOKEN_EXPIRES_IN = "30d"
 
-EMAIL_USER= "ecohaven787@gmail.com"
-EMAIL_PASS= "thta vezg irvo auve"
+# EMAIL_USER= "ecohaven787@gmail.com"
+# EMAIL_PASS= "thta vezg irvo auve"
