--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "formik": "^2.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^6.23.1",
     "yup": "^1.4.0"
   },
