--- a/server/.env
+++ b/server/.env
@@ -2,9 +2,9 @@ APP_PORT = 3001
 CLIENT_URL="http://localhost:3000"
 DB_HOST="localhost"
 DB_PORT=3306
-DB_USER="eco"
-DB_PWD="mysql"
-DB_NAME="eco"
+DB_USER="eco234550h"
+DB_PWD="ecohavenAdmin"
+DB_NAME="haveneco_234550h"
 
 APP_SECRET = "ecohaven_app_secret"
 TOKEN_EXPIRES_IN = "30d"
