Fix some issues
Fix associate booking id not showing up in check in
Change status from payment to paid

--- a/server/.env
+++ b/server/.env
@@ -2,9 +2,9 @@ APP_PORT = 3001
 CLIENT_URL="http://localhost:3000"
 DB_HOST="localhost"
 DB_PORT=3306
-DB_USER="eco"
-DB_PWD="mysql"
-DB_NAME="eco"
+DB_USER="qf_eco"
+DB_PWD="qifangtheecohaven25"
+DB_NAME="ecothehaven"
 
 APP_SECRET = "ecohaven_app_secret"
 TOKEN_EXPIRES_IN = "30d"
