--- a/client/package.json
+++ b/client/package.json
@@ -21,9 +21,12 @@
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.11",
     "formik": "^2.4.6",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-qr-scanner": "^1.0.0-alpha.11",
     "react-qrcode": "^0.3.6",
     "react-responsive": "^10.0.0",
