--- a/server/.env
+++ b/server/.env
@@ -2,9 +2,9 @@ APP_PORT = 3001
 CLIENT_URL="http://localhost:3000"
 DB_HOST="localhost"
 DB_PORT=3306
-DB_USER = "fsdp"
-DB_PWD = "Megainfernape7"
-DB_NAME = "fsdp"
+DB_USER = "qf_eco"
+DB_PWD = "qifangtheecohaven25"
+DB_NAME = "ecothehaven"
 
 APP_SECRET = "ecohaven_app_secret"
 TOKEN_EXPIRES_IN = "30d"
