--- a/client/package.json
+++ b/client/package.json
@@ -21,10 +21,13 @@
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.11",
     "formik": "^2.4.6",
+    "js": "^0.1.0",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
+    "model": "^0.0.6",
+    "pdf": "^0.1.0",
     "qrcode.react": "^3.1.0",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-qr-scanner": "^1.0.0-alpha.11",
