--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.11",
+    "file-saver": "^2.0.5",
     "formik": "^2.4.6",
     "js": "^0.1.0",
     "jspdf": "^2.5.1",
