--- a/server/.env
+++ b/server/.env
@@ -1,13 +1,13 @@
-APP_PORT = 3001
-CLIENT_URL="http://localhost:3000"
-DB_HOST="localhost"
-DB_PORT=3306
-DB_USER = "qf_eco"
-DB_PWD = "qifangtheecohaven25"
-DB_NAME = "ecothehaven"
+# APP_PORT = 3001
+# CLIENT_URL="http://localhost:3000"
+# DB_HOST="localhost"
+# DB_PORT=3306
+# DB_USER = "qf_eco"
+# DB_PWD = "qifangtheecohaven25"
+# DB_NAME = "ecothehaven"
 
-APP_SECRET = "ecohaven_app_secret"
-TOKEN_EXPIRES_IN = "30d"
+# APP_SECRET = "ecohaven_app_secret"
+# TOKEN_EXPIRES_IN = "30d"
 
-EMAIL_USER= "ecohaven787@gmail.com"
-EMAIL_PASS= "thta vezg irvo auve"
+# EMAIL_USER= "ecohaven787@gmail.com"
+# EMAIL_PASS= "thta vezg irvo auve"
