--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,1 @@
-
-server/.env
-server/.env
-server/.env
-server/.env
-/server
-/server
-server/.env
-/server
-server/.env
-/server
-server/.env
+.env
