--- a/server/.env.example
+++ b/server/.env.example
@@ -2,7 +2,7 @@ APP_PORT = 3001
 CLIENT_URL="http://localhost:3000"
 DB_HOST="localhost"
 DB_PORT=3306
-DB_USER = "qf_eco2"
+DB_USER = "qf_eco"
 DB_PWD = "qifangtheecohaven25"
 DB_NAME = "ecothehaven"
 
