--- a/client/package.json
+++ b/client/package.json
@@ -11,13 +11,14 @@
     "start": "vite"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.0",
-    "@mui/material": "^5.15.19",
+    "@mui/material": "^5.16.4",
     "@mui/x-data-grid": "^7.10.0",
     "@mui/x-date-pickers": "^7.10.0",
     "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.11",
     "file-saver": "^2.0.5",
@@ -29,6 +30,7 @@
     "pdf": "^0.1.0",
     "qrcode.react": "^3.1.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-qr-scanner": "^1.0.0-alpha.11",
