--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "js": "^0.1.0",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
+    "lodash.debounce": "^4.0.8",
     "model": "^0.0.6",
     "pdf": "^0.1.0",
     "qrcode.react": "^3.1.0",
