--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.0",
+    "@mui/lab": "^5.0.0-alpha.173",
     "@mui/material": "^5.16.4",
     "@mui/x-data-grid": "^7.10.0",
     "@mui/x-date-pickers": "^7.10.0",
@@ -38,6 +39,7 @@
     "react-qrcode": "^0.3.6",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.23.1",
+    "recharts": "^2.12.7",
     "yup": "^1.4.0"
   },
   "devDependencies": {
