fixed homepage, rewards & footers
added whyus in homepage, rewards responsive fix & footers responsive fix

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 server/.env.example
 *.example
 server/event-picture/Screenshot 2023-08-12 165836.png
+server/event-picture/Screenshot 2024-03-18 015533.png
