--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ server/.env.example
 *.example
 server/event-picture/Screenshot 2023-08-12 165836.png
 server/event-picture/Screenshot 2024-03-18 015533.png
+server/itemuploads/cutlery set.jpeg
+server/itemuploads/cookingpot.jpg
