--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "jspdf-autotable": "^3.8.2",
     "lodash.debounce": "^4.0.8",
     "model": "^0.0.6",
+    "nodemailer": "^6.9.14",
     "pdf": "^0.1.0",
     "qrcode.react": "^3.1.0",
     "react": "^18.3.1",
