--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,7 @@
     "@mui/lab": "^5.0.0-alpha.173",
     "@mui/material": "^5.16.4",
     "@mui/x-data-grid": "^7.10.0",
-    "@mui/x-date-pickers": "^7.10.0",
+    "@mui/x-date-pickers": "^7.12.0",
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
     "date-fns": "^3.6.0",
@@ -33,6 +33,7 @@
     "pdf": "^0.1.0",
     "qrcode.react": "^3.1.0",
     "react": "^18.3.1",
+    "react-calendar": "^5.0.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
